fixed max width on mobile layout

--- a/index.css
+++ b/index.css
@@ -18,6 +18,8 @@
   --clr-chacoral: hsl(235, 18%, 26%);
   --clr-grey: hsl(231, 7%, 60%);
   --clr-white: hsl(0, 0%, 100%);
+
+  --mobile-width: 375px;
 }
 
 html,
@@ -54,7 +56,7 @@ body {
 .card {
   background-color: var(--clr-white);
   width: fit-content;
-  max-width: 420px;
+  max-width: var(--mobile-width);
   min-width: 320px;
   display: flex;
   flex-direction: column-reverse;
@@ -126,7 +128,7 @@ body {
 .success-card {
   width: 100%;
   height: 100vh;
-  max-width: 420px;
+  max-width: var(--mobile-width);
   background-color: var(--clr-white);
   padding-inline: 24px;
   padding-top: 6rem;
